Modified StyleCop settings and ignored StyleCop cache files.

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,14 @@
 /src/test/HelloCI.Tests/bin/Debug
 /src/app/HelloCI.Core/obj/Debug
 /src/app/HelloCI.Core/bin/Debug
+/src/app/HelloCI.App/obj/Debug
+/src/app/HelloCI.App/bin/Debug
 /src/app/HelloCI.Web/obj/Debug
 /src/app/HelloCI.Web/bin
 /src/app/HelloCI.Web/HelloCI.Web.csproj.user
 /.vs/config
 /.vs/HelloCI/v14
-/HelloCI.App/obj/Debug
-/HelloCI.App/bin/Debug
-/src/app/HelloCI.App/obj/Debug
-/src/app/HelloCI.App/bin/Debug
 /bin
 /testbin
 /tools/NUnit/TestResult.xml
+/src/app/**/StyleCop.Cache
